Fix bug of the menu (z-index -1 was keeping the scrolldown menu under the page)

--- a/src/components/Header/Nav/nav.scss
+++ b/src/components/Header/Nav/nav.scss
@@ -2,13 +2,14 @@
 @use 'src/styles/mixins';
 
 .nav {
+    display: block;
     position: absolute;
     width: 100%;
     top: 0;
     left: 0;
     background: vars.$dark;
     transform: translateY(-75%);
-    z-index: -1;
+    z-index: 0;
     transition: transform 1s;
 
     &--open {
